[package]
name = "memorylesstest"
version = "0.1.0"
authors = ["simplelins <whlin.simple@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[package.metadata.fortanix-sgx]
stack-size=0x200_000
heap-size=0x100_000_000
debug=true